infra/manifests/mongo-infra.yml
apiVersion: v1
kind: Namespace
metadata:
  name: greg-company
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: greg-company
spec:
  type: LoadBalancer # <--- O cloud-provider-kind vai dar um IP exclusivo para ele
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb-store
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: greg-company
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-store
  template:
    metadata:
      labels:
        app: mongodb-store
    spec:
      containers:
        - name: mongodb-store
          image: mongo:latest
          ports:
            - containerPort: 27017
