infra/manifests/postgres-infra.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-infra
  namespace: greg-company
  labels:
    app: postgres-infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-infra
  template:
    metadata:
      labels:
        app: postgres-infra
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: greg-company
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-infra
