infra/manifests/redis-infra.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: greg-company
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: greg-company
spec:
  type: LoadBalancer # <--- IP exclusivo para o Redis
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: greg-company
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
      - name: redis
        image: redis:latest
        command: ["redis-server", "--appendonly", "yes"]
        ports:
        - containerPort: 6379
