infra/manifests/sql-infra.yml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  namespace: greg-company
spec:
  type: NodePort # <--- Adicionado
  ports:
  - port: 1433
    targetPort: 1433
    nodePort: 31433 # <--- Bate com a containerPort do kind-config
  selector:
    app: mssql-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver-deployment
  namespace: greg-company
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-db
  template:
    metadata:
      labels:
        app: mssql-db
    spec:
      containers:
        - name: mssql-db
          image: mcr.microsoft.com/mssql/server:2022-latest
          env: # 💡 AQUI ESTÁ A MÁGICA REQUISITADA!
            - name: ACCEPT_EULA
              value: "Y"
            - name: SA_USERNAME
              value: "sa"
            - name: MSSQL_SA_PASSWORD
              value: "Opala@1704.Test!" # Digite uma senha forte direto aqui para o teste local
          ports:
            - containerPort: 1433
